--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "mongoose": "^9.0.2",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
