--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "tsx scripts/seed.ts",
     "lint": "eslint"
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
     "postcss": "^8.5.6",
@@ -25,6 +28,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4.1.18",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
