--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "seed": "tsx scripts/seed.ts",
+    "seed:roadmaps": "tsx scripts/seed-roadmaps.ts",
     "lint": "eslint"
   },
   "dependencies": {
