--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "seed": "tsx scripts/seed.ts",
     "seed:roadmaps": "tsx scripts/seed-roadmaps.ts",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:user": "tsx scripts/usermake.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
